# LearnOpenGl

./: .gitignore  CMakeLists.txt  README.md
Homework1/Assignment1/: CMakeLists.txt  main.cpp  rasterizer.cpp
Homework2/代码框架/: main.cpp  rasterizer.cpp
Homework3/Assignment3/: CMakeLists.txt  main.cpp  rasterizer.cpp
Homework4/: main.cpp
Homework5/: Renderer.cpp  Triangle.hpp
Homework6/: BVH.cpp  BVH.hpp  Bounds3.hpp  README.md  Renderer.cpp  Scene.cpp  Triangle.hpp
Homework7/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp
Homework7/images/: binary.ppm  binary1.ppm
Homework8/: README.md
Homework8/src/: rope.cpp  rope.h
assets/models/nanosuit/: nanosuit.blend
demo/: DeapthTest.md  StencilTest.md  assimpTest.cpp  blendingTest.md  cameraTest.cpp  coordinateSystemsTest.cpp  framebufferTest.cpp  helloTriangle.cpp  lightCasterTest.cpp  lightTest.cpp  lightTexTest.cpp  mulLightTest.cpp  shaderTest.cpp  textureTest.cpp  transformTest.cpp
include/common/: Camera.h  DirLight.h  Light.h  Material.h  Mesh.h  Model.h  PointLight.h  Scene.h  Shader.h  SpotLight.h  Texture.h  camera.h  input.h  shader.h  window.h
include/glad/: glad.h
shader/fragmentShader/: MultipleLightFS.frag  baseFragmentShader.fs  diffTexFS.frag  dirLightFS.frag  ground.frag  lightFragmentShader.fs  lightFragmentShader2.fs  lightTexFS.fs  pointLightFS.frag  reflect.frag  refract.frag  spotLightFS.frag  textureFragmentShader.fs  unlitTex.frag
shader/vertexShader/: baseVertexShader.vs  coorainateVertexShader.vs  gradientVertexShader.vs  normalVertexShader.vs  offsetVertexShader.vs  textureVertexShader.vs  transformVertexShader.vs  upsideDownShader.vs
src/: glad.c
src/common/: Camera.cpp  DirLight.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  PointLight.cpp  Scene.cpp  Shader.cpp  SpotLight.cpp  Texture.cpp  camera.cpp  shader.cpp  window.cpp
